add rich snippets

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,9 @@
     </div>
 
     <div class="footer_copyright">
-        &copy; 2017 Sealicon Valley Inc. All Rights Reserved.
+        © 2017
+<span itemprop="author" itemscope itemtype="http://schema.org/Person">
+<span itemprop="name">Sealicon Valley</span> </span>Inc. All Rights Reserved.
     </div>
 
 </div>
