remove itemprop. remove dup html body tags. update favicons.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,14 +54,13 @@
 
 <body>
     {% include header.html %}
-    <span itemscope itemtype="http://schema.org/Article">
 
     <div class="post_container">
         <div class="post_info">
-            <span itemprop="name" class="post_title">
+            <span class="post_title">
               {{ page.title }}
             </span>
-            <span itemprop="datePublished" class="post_date">
+            <span class="post_date">
               {{ page.date | date: "%B %-d, %Y"}}
             </span>
 
@@ -69,7 +68,7 @@
         {% if page.tags contains 'comics' %}
 
         <div class="comic">
-          <img itemprop="image"  src="{{ page.comic | remove: '
+          <img src="{{ page.comic | remove: '
           <p>' | remove: '</p>' | replace: 'BASE', base }}" />
         </div>
         {% endif %}
@@ -145,7 +144,7 @@
                             <a class="post-link" href="{{base}}{{ post.url }}">
                                 <div class="related_post_excerpt_container">
 
-                                    <img itemprop="image"  src="{{ post.preview | remove: '
+                                    <img src="{{ post.preview | remove: '
                                     <p>' | remove: '</p>' | replace: 'BASE', base }}" />
 
                                 </div>
@@ -179,7 +178,6 @@
         {% endif %}
 
     </div>
-  </span>
     {% include footer.html %}
 </body>
 
