--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 <div class="footer">
   <form action="https://getsimpleform.com/messages?form_api_token=d9fbe3b05597de14b1e5cc7db2ceea84" method="post">
     <div class="subscribe_container">
-      <input type="text" name="foo" style="display: none;">
-      <input type='hidden' name='redirect_to' value='http://www.sealiconvalley.com/thankyou.html' />
+      <input type='hidden' name='redirect_to' value='http://www.sealiconvalley.com/thanks.html' />
+        <input type="text" name="foo" style="display: none;">
         <input type="text" name="email" class="subscribe_email" id="input_email" placeholder="Email Address"/>
       <input class="subscribe_button" type='submit' value='Subscribe' />
     </div>
