--- a/assets/main.css
+++ b/assets/main.css
@@ -134,6 +134,19 @@ body {
     margin: 40px;
 }
 
+.masonry_one {
+
+      padding: 0;
+      -moz-column-gap: 30px;
+      -webkit-column-gap: 30px;
+      column-gap: 30px;
+      font-size: .85em;
+      margin: 40px;
+          -moz-column-count: 1;
+          -webkit-column-count: 1;
+          column-count: 1;
+}
+
 .item {
     display: inline-block;
     background: #fff;
